including code of plotting the future price

--- a/Stock_Market_with_Python/Bitcoin_Price_Prediction_with_LSTM.ipynb
+++ b/Stock_Market_with_Python/Bitcoin_Price_Prediction_with_LSTM.ipynb
@@ -2647,7 +2647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -2984,7 +2984,7 @@
        "        [0.85391712]]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2996,7 +2996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -3005,7 +3005,7 @@
        "(5, 5, 1)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3022,7 +3022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -3059,7 +3059,7 @@
        "        [0.85391712]]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3070,7 +3070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -3105,116 +3105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[50872.81 ],\n",
-       "       [51618.85 ],\n",
-       "       [51379.94 ],\n",
-       "       [49634.555],\n",
-       "       [48003.086],\n",
-       "       [46678.45 ],\n",
-       "       [46297.047],\n",
-       "       [46198.17 ],\n",
-       "       [45812.438],\n",
-       "       [45980.01 ],\n",
-       "       [46783.297],\n",
-       "       [47719.902],\n",
-       "       [48158.05 ],\n",
-       "       [48614.934],\n",
-       "       [48665.773],\n",
-       "       [47404.375],\n",
-       "       [45809.49 ],\n",
-       "       [44428.61 ],\n",
-       "       [43742.324],\n",
-       "       [43509.367],\n",
-       "       [43438.793],\n",
-       "       [43307.37 ],\n",
-       "       [43348.043],\n",
-       "       [43205.67 ],\n",
-       "       [42920.535],\n",
-       "       [42894.043],\n",
-       "       [43881.3  ],\n",
-       "       [45612.465],\n",
-       "       [47253.527],\n",
-       "       [48403.24 ],\n",
-       "       [49478.53 ],\n",
-       "       [51127.95 ],\n",
-       "       [52849.016],\n",
-       "       [54108.14 ],\n",
-       "       [54897.566],\n",
-       "       [55435.926],\n",
-       "       [56244.516],\n",
-       "       [56624.98 ],\n",
-       "       [56721.76 ],\n",
-       "       [57254.27 ],\n",
-       "       [58750.457],\n",
-       "       [59854.223],\n",
-       "       [60289.992],\n",
-       "       [61171.09 ],\n",
-       "       [62222.008],\n",
-       "       [63526.023],\n",
-       "       [63808.617],\n",
-       "       [63309.254],\n",
-       "       [62634.062],\n",
-       "       [62491.35 ],\n",
-       "       [62791.176],\n",
-       "       [62710.742],\n",
-       "       [61515.613],\n",
-       "       [60986.457],\n",
-       "       [61772.58 ]], dtype=float32)"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predicted_btc_price_test_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# predicted_5_days_forecast_price_test_x.tolist()\n",
-    "\n",
-    "predicted_5_days_forecast_price_test_x = np.array(predicted_5_days_forecast_price_test_x) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[[62791.17578125]],\n",
-       " [[62710.734375]],\n",
-       " [[61515.61328125]],\n",
-       " [[60986.45703125]],\n",
-       " [[61772.578125]]]"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predicted_5_days_forecast_price_test_x.tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -3232,19 +3123,47 @@
        "       61772.58 ], dtype=float32)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predicted_btc_price_test_data = np.array(predicted_btc_price_test_data.flatten())\n",
     "predicted_btc_price_test_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[62791.176]],\n",
+       "\n",
+       "       [[62710.734]],\n",
+       "\n",
+       "       [[61515.613]],\n",
+       "\n",
+       "       [[60986.457]],\n",
+       "\n",
+       "       [[61772.58 ]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predicted_5_days_forecast_price_test_x = np.array(predicted_5_days_forecast_price_test_x) \n",
+    "predicted_5_days_forecast_price_test_x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -3254,7 +3173,7 @@
        "      dtype=float32)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3266,7 +3185,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([50872.81 , 51618.85 , 51379.94 , 49634.555, 48003.086, 46678.45 ,\n",
+       "       46297.047, 46198.17 , 45812.438, 45980.01 , 46783.297, 47719.902,\n",
+       "       48158.05 , 48614.934, 48665.773, 47404.375, 45809.49 , 44428.61 ,\n",
+       "       43742.324, 43509.367, 43438.793, 43307.37 , 43348.043, 43205.67 ,\n",
+       "       42920.535, 42894.043, 43881.3  , 45612.465, 47253.527, 48403.24 ,\n",
+       "       49478.53 , 51127.95 , 52849.016, 54108.14 , 54897.566, 55435.926,\n",
+       "       56244.516, 56624.98 , 56721.76 , 57254.27 , 58750.457, 59854.223,\n",
+       "       60289.992, 61171.09 , 62222.008, 63526.023, 63808.617, 63309.254,\n",
+       "       62634.062, 62491.35 , 62791.176, 62710.742, 61515.613, 60986.457,\n",
+       "       61772.58 ], dtype=float32)"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predicted_btc_price_test_data = np.array(predicted_btc_price_test_data.flatten())\n",
+    "predicted_btc_price_test_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3279,7 +3228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -3288,7 +3237,7 @@
        "(60,)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3306,7 +3255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
