--- a/Stock_Market_with_Python/Bitcoin_Price_Prediction_with_LSTM.ipynb
+++ b/Stock_Market_with_Python/Bitcoin_Price_Prediction_with_LSTM.ipynb
@@ -8,7 +8,11 @@
     "\n",
     "<a href=\"https://bit.ly/3mXnKGH\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link to my YouTube Video</b></h1></a>\n",
     "\n",
-    "[![IMAGE ALT TEXT](https://imgur.com/ZtAvye5.png)](https://bit.ly/3mXnKGH \"𝗕𝗶𝘁𝗰𝗼𝗶𝗻 𝗣𝗿𝗶𝗰𝗲 𝗣𝗿𝗲𝗱𝗶𝗰𝘁𝗶𝗼𝗻 𝘄𝗶𝘁𝗵 𝗗𝗲𝗲𝗽 𝗟𝗲𝗮𝗿𝗻𝗶𝗻𝗴 𝗟𝗦𝗧𝗠\")"
+    "[![IMAGE ALT TEXT](https://imgur.com/ZtAvye5.png)](https://bit.ly/3mXnKGH \"𝗕𝗶𝘁𝗰𝗼𝗶𝗻 𝗣𝗿𝗶𝗰𝗲 𝗣𝗿𝗲𝗱𝗶𝗰𝘁𝗶𝗼𝗻 𝘄𝗶𝘁𝗵 𝗗𝗲𝗲𝗽 𝗟𝗲𝗮𝗿𝗻𝗶𝗻𝗴 𝗟𝗦𝗧𝗠\")\n",
+    "\n",
+    "## Disclaimer\n",
+    "\n",
+    "### This notebook is entirely informative. None of the content presented in this notebook constitutes a recommendation that any particular security, portfolio of securities, transaction or investment strategy is suitable for any specific person. Futures, stocks and options trading involves substantial risk of loss and is not suitable for every investor. The valuation of futures, stocks and options may fluctuate, and, as a result, clients may lose more than their original investment."
    ]
   },
   {
