--- a/Stock_Market_with_Python/yfinance_stock_data_pulling_TESLA_price_prediction_with_Time_Series.ipynb
+++ b/Stock_Market_with_Python/yfinance_stock_data_pulling_TESLA_price_prediction_with_Time_Series.ipynb
@@ -18,7 +18,11 @@
         "\n",
         "But if you are building a serious trading system requiring complete confidence and total reliability on the data fed to the system, I’d recommend going with a official and alternative market data provider- preferably one claiming to provide low latency data directly from exchanges.\n",
         "\n",
-        "Like Polygon or IEX.\n"
+        "Like Polygon or IEX.\n",
+        "\n",
+        "## Disclaimer\n",
+        "\n",
+        "### This notebook is entirely informative. None of the content presented in this notebook constitutes a recommendation that any particular security, portfolio of securities, transaction or investment strategy is suitable for any specific person. Futures, stocks and options trading involves substantial risk of loss and is not suitable for every investor. The valuation of futures, stocks and options may fluctuate, and, as a result, clients may lose more than their original investment.\n"
       ]
     },
     {
