updating links for dataset in Kaggle

--- a/Stock_Market_with_Python/Bitcoin_Price_Prediction_with_LSTM.ipynb
+++ b/Stock_Market_with_Python/Bitcoin_Price_Prediction_with_LSTM.ipynb
@@ -12,7 +12,9 @@
     "\n",
     "## Disclaimer\n",
     "\n",
-    "### This notebook is entirely informative. None of the content presented in this notebook constitutes a recommendation that any particular security, portfolio of securities, transaction or investment strategy is suitable for any specific person. Futures, stocks and options trading involves substantial risk of loss and is not suitable for every investor. The valuation of futures, stocks and options may fluctuate, and, as a result, clients may lose more than their original investment."
+    "### This notebook is entirely informative. None of the content presented in this notebook constitutes a recommendation that any particular security, portfolio of securities, transaction or investment strategy is suitable for any specific person. Futures, stocks and options trading involves substantial risk of loss and is not suitable for every investor. The valuation of futures, stocks and options may fluctuate, and, as a result, clients may lose more than their original investment.\n",
+    "\n",
+    "### [Uploaded the whole dataset here in Kaggle](https://www.kaggle.com/paulrohan2020/bitcoin-historic-prices-from-oct2015-to-oct2021)"
    ]
   },
   {
@@ -189,9 +191,14 @@
     }
    ],
    "source": [
-    "# root_path = '/content/drive/MyDrive/Datasets_For_Working/Bitcoin_2015-2021-30-Oct-2021/3_pull.csv'\n",
-    "root_path = './input/btc_ohlc_Oct_2015_to_Oct_2021.csv'\n",
+    "# You can also get the dataset from Kaggle ( I uploaded the whole .csv file here)\n",
+    "# https://www.kaggle.com/paulrohan2020/bitcoin-historic-prices-from-oct2015-to-oct2021\n",
     "\n",
+    "# For accessing the dataset from my google drive while running the code in Colab\n",
+    "# root_path = '/content/drive/MyDrive/Datasets_For_Working/Bitcoin_2015-2021-30-Oct-2021/3_pull.csv'\n",
+    "\n",
+    "# The dataset in local machine\n",
+    "root_path = './input/btc_ohlc_Oct_2015_to_Oct_2021.csv'\n",
     "\n",
     "# btc_input_df = pd.read_csv(root_path, nrows=500)\n",
     "btc_input_df = pd.read_csv(root_path)\n",
