updating image link to YouTube Video

--- a/Finance_Stock_Crypto_Trading/Historic_Crypto.ipynb
+++ b/Finance_Stock_Crypto_Trading/Historic_Crypto.ipynb
@@ -1,12 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# !pip install Historic-Crypto"
+    "<h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Get Bitcoin Historic Data For Free with Python - Detailed Video in my YouTube Channel</b><a id=\"0\"></a></h1>\n",
+    "\n",
+    "<a href=\"https://bit.ly/3mwv2kJ\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link to my YouTube Video</b></h1></a>\n",
+    "\n",
+    "[![IMAGE ALT TEXT](https://imgur.com/ZvzhIdK.png)](https://bit.ly/3mwv2kJ \"Get Bitcoin Historic Data For Free with Python - Detailed Video in my YouTube Channel\")"
    ]
   },
   {
@@ -15,6 +17,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# If running in Colab - you first need to install the package ( Historic-Crypto )\n",
+    "# !pip install Historic-Crypto\n",
+    "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
