updating image link to YouTube Video

--- a/Finance_Stock_Crypto_Trading/yfinance_stock_data_pulling_TESLA_price_prediction_with_Time_Series.ipynb
+++ b/Finance_Stock_Crypto_Trading/yfinance_stock_data_pulling_TESLA_price_prediction_with_Time_Series.ipynb
@@ -6,6 +6,16 @@
         "id": "rwLuMF1KEncc"
       },
       "source": [
+        "<h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>𝗘𝘅𝘁𝗿𝗮𝗰𝘁 𝗦𝘁𝗼𝗰𝗸 𝗠𝗮𝗿𝗸𝗲𝘁 𝗗𝗮𝘁𝗮 𝘄𝗶𝘁𝗵 𝘆𝗳𝗶𝗻𝗮𝗻𝗰𝗲 𝗳𝗼𝗿 𝗳𝗿𝗲𝗲 𝗮𝗻𝗱 𝗧𝗲𝘀𝗹𝗮 𝗦𝘁𝗼𝗰𝗸 𝗣𝗿𝗲𝗱𝗶𝗰𝘁𝗶𝗼𝗻 - Detailed Video in my YouTube Channel</b><a id=\"0\"></a></h1>\n",
+        "\n",
+        "<a href=\"https://bit.ly/3nC3Hgk\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link to my YouTube Video</b></h1></a>\n",
+        "\n",
+        "[![IMAGE ALT TEXT](https://imgur.com/FbQZXuD.png)](https://bit.ly/3nC3Hgk \"𝗘𝘅𝘁𝗿𝗮𝗰𝘁 𝗦𝘁𝗼𝗰𝗸 𝗠𝗮𝗿𝗸𝗲𝘁 𝗗𝗮𝘁𝗮 𝘄𝗶𝘁𝗵 𝘆𝗳𝗶𝗻𝗮𝗻𝗰𝗲 𝗳𝗼𝗿 𝗳𝗿𝗲𝗲 𝗮𝗻𝗱 𝗧𝗲𝘀𝗹𝗮 𝗦𝘁𝗼𝗰𝗸 𝗣𝗿𝗲𝗱𝗶𝗰𝘁𝗶𝗼𝗻 - Detailed Video in my YouTube Channel\")\n",
+        "\n",
+        "\n",
+        "-------\n",
+        "\n",
+        "\n",
         "`yfinance` is the most popular open source library to access the financial data available on Yahoo Finance.\n",
         "\n",
         "Yahoo Finance used to have their own official API, but this was decommissioned 2017.\n",
