updating image link to YouTube Video

--- a/Finance_Stock_Crypto_Trading/Historic_Stock_yfinance.ipynb
+++ b/Finance_Stock_Crypto_Trading/Historic_Stock_yfinance.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -10,38 +10,9 @@
         "id": "cyQg-iDS3T64",
         "outputId": "6a1c6400-70b9-4736-bf8a-e0629e86cfc7"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Collecting yfinance\n",
-            "  Downloading yfinance-0.1.66-py2.py3-none-any.whl (25 kB)\n",
-            "Requirement already satisfied: multitasking>=0.0.7 in /usr/local/lib/python3.7/dist-packages (from yfinance) (0.0.9)\n",
-            "Requirement already satisfied: numpy>=1.15 in /usr/local/lib/python3.7/dist-packages (from yfinance) (1.19.5)\n",
-            "Requirement already satisfied: requests>=2.20 in /usr/local/lib/python3.7/dist-packages (from yfinance) (2.23.0)\n",
-            "Collecting lxml>=4.5.1\n",
-            "  Downloading lxml-4.6.4-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.manylinux_2_24_x86_64.whl (6.3 MB)\n",
-            "\u001b[K     |████████████████████████████████| 6.3 MB 7.6 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: pandas>=0.24 in /usr/local/lib/python3.7/dist-packages (from yfinance) (1.1.5)\n",
-            "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.24->yfinance) (2.8.2)\n",
-            "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.24->yfinance) (2018.9)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.7.3->pandas>=0.24->yfinance) (1.15.0)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests>=2.20->yfinance) (2.10)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests>=2.20->yfinance) (2021.10.8)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests>=2.20->yfinance) (1.24.3)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests>=2.20->yfinance) (3.0.4)\n",
-            "Installing collected packages: lxml, yfinance\n",
-            "  Attempting uninstall: lxml\n",
-            "    Found existing installation: lxml 4.2.6\n",
-            "    Uninstalling lxml-4.2.6:\n",
-            "      Successfully uninstalled lxml-4.2.6\n",
-            "Successfully installed lxml-4.6.4 yfinance-0.1.66\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "!pip install yfinance\n",
+        "# !pip install yfinance\n",
         "# !pip install yfinance --upgrade --no-cache-dir"
       ]
     },
