--- a/TensorFlow/TF_Fundaments_YT/Fundamentals_TF_v1_YT.ipynb
+++ b/TensorFlow/TF_Fundaments_YT/Fundamentals_TF_v1_YT.ipynb
@@ -2,8 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## [Youtube Link](https://youtu.be/UNfxShN6vp4)\n",
+    "<h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Learn Tensorflow Fundamentals in 45 Mints - Detailed Video in my YouTube Channel</b><a id=\"0\"></a></h1>\n",
+    "\n",
+    "<a href=\"https://youtu.be/UNfxShN6vp4?list=PLxqBkZuBynVRnkwNgULYmJJs_JQZOAqpU\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link to my YouTube Video</b></h1></a>\n",
+    "\n",
+    "[![IMAGE ALT TEXT](https://imgur.com/pUn9ooq.png)](https://youtu.be/UNfxShN6vp4?list=PLxqBkZuBynVRnkwNgULYmJJs_JQZOAqpU \"Learn Tensorflow Fundamentals in 45 Mints - Detailed Video in my YouTube Channel\")\n",
+    "\n",
+    "-----------------------\n",
     "\n",
     "# Tensors\n",
     "\n",
@@ -23,127 +30,115 @@
     "## Scalars (0D tensors)\n",
     "\n",
     "A **scalar** is a tensor of only one number. For example, a Numpy float32 or float64 number is a scalar tensor (or scalar array).\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.6.0\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "print(tf.__version__)\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "2.6.0\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "source": [
-    "tensor = tf.constant(5)\n",
-    "print(tensor)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "tf.Tensor(5, shape=(), dtype=int32)\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "tensor = tf.constant(5)\n",
+    "print(tensor)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "source": [
-    "tensor = tf.constant([1, 2, 3])\n",
-    "print(tensor)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "tf.Tensor([1 2 3], shape=(3,), dtype=int32)\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "tensor = tf.constant([1, 2, 3])\n",
+    "print(tensor)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "tensor = tf.constant([[1, 2, 3], [2,3,9]])\n",
     "# print(tensor)\n",
     "print(tf.rank(tensor).numpy())"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "\n",
     "It is easy to dispay the number of axes (or dimensionality) of a Numpy tensor with the *ndim* attribute. Let's look at an example of a Numpy scalar:"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
-   "source": [
-    "print(tensor.ndim)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "2\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "print(tensor.ndim)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "source": [
-    "tensor = tf.constant([[[1, 2, 3],\n",
-    "                       [4, 5, 6]],\n",
-    "                      \n",
-    "                      [[7, 8, 9],\n",
-    "                       [10, 11, 12]],\n",
-    "                      \n",
-    "                      [[13, 14, 15],\n",
-    "                       [16, 17, 18]]])\n",
-    "tensor"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(3, 2, 3), dtype=int32, numpy=\n",
@@ -157,22 +152,29 @@
        "        [16, 17, 18]]], dtype=int32)>"
       ]
      },
+     "execution_count": 25,
      "metadata": {},
-     "execution_count": 25
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "tensor = tf.constant([[[1, 2, 3],\n",
+    "                       [4, 5, 6]],\n",
+    "                      \n",
+    "                      [[7, 8, 9],\n",
+    "                       [10, 11, 12]],\n",
+    "                      \n",
+    "                      [[13, 14, 15],\n",
+    "                       [16, 17, 18]]])\n",
+    "tensor"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "source": [
-    "tensor_float16 = tf.constant([[10, 7], [14, 15]], dtype=tf.float16)\n",
-    "tensor_float16"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(2, 2), dtype=float16, numpy=\n",
@@ -180,77 +182,75 @@
        "       [14., 15.]], dtype=float16)>"
       ]
      },
+     "execution_count": 26,
      "metadata": {},
-     "execution_count": 26
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "tensor_float16 = tf.constant([[10, 7], [14, 15]], dtype=tf.float16)\n",
+    "tensor_float16"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Variable 'Variable:0' shape=(2,) dtype=int32, numpy=array([4, 5], dtype=int32)>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mutable_tensor = tf.Variable([4, 5])\n",
     "\n",
     "immuable_tensor = tf.constant([5, 6])\n",
     "\n",
     "mutable_tensor"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "<tf.Variable 'Variable:0' shape=(2,) dtype=int32, numpy=array([4, 5], dtype=int32)>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 27
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
-   "source": [
-    "# mutable_tensor[0] = 12\n",
-    "mutable_tensor[0].assign(12)\n",
-    "mutable_tensor"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "<tf.Variable 'Variable:0' shape=(2,) dtype=int32, numpy=array([12,  5], dtype=int32)>"
       ]
      },
+     "execution_count": 28,
      "metadata": {},
-     "execution_count": 28
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "# mutable_tensor[0] = 12\n",
+    "mutable_tensor[0].assign(12)\n",
+    "mutable_tensor"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Creating Random Tensors"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
-   "source": [
-    "random_gen = tf.random.Generator.from_seed(42)\n",
-    "\n",
-    "random_normal = random_gen.normal(shape=(2, 3))\n",
-    "random_normal"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(2, 3), dtype=float32, numpy=\n",
@@ -258,22 +258,24 @@
        "       [-1.2573844 , -0.23193763, -1.8107855 ]], dtype=float32)>"
       ]
      },
+     "execution_count": 29,
      "metadata": {},
-     "execution_count": 29
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "random_gen = tf.random.Generator.from_seed(42)\n",
+    "\n",
+    "random_normal = random_gen.normal(shape=(2, 3))\n",
+    "random_normal"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "source": [
-    "random_uniform = random_gen.uniform(shape=(2, 3))\n",
-    "random_uniform"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(2, 3), dtype=float32, numpy=\n",
@@ -281,61 +283,66 @@
        "       [0.20781887, 0.711869  , 0.8843919 ]], dtype=float32)>"
       ]
      },
+     "execution_count": 30,
      "metadata": {},
-     "execution_count": 30
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "random_uniform = random_gen.uniform(shape=(2, 3))\n",
+    "random_uniform"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
-   "source": [
-    "a = tf.random.shuffle([1,2,3,4,5], seed=2345).numpy()\n",
-    "b = tf.random.shuffle([1,2,3,4,5], seed=2345).numpy()\n",
-    "print(a == b)\n"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "[False False False False False]\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "a = tf.random.shuffle([1,2,3,4,5], seed=2345).numpy()\n",
+    "b = tf.random.shuffle([1,2,3,4,5], seed=2345).numpy()\n",
+    "print(a == b)\n"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Special Notes on tf.random.set_seed()"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ True  True  True  True  True]\n"
+     ]
+    }
+   ],
    "source": [
     "tf.random.set_seed(2345)\n",
     "a = tf.random.shuffle([1,2,3,4,5], seed=2345).numpy()\n",
     "tf.random.set_seed(2345)\n",
     "b = tf.random.shuffle([1,2,3,4,5], seed=2345).numpy()\n",
     "print(a == b)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[ True  True  True  True  True]\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "[Official Doc](https://www.tensorflow.org/api_docs/python/tf/random/set_seed)\n",
     "\n",
@@ -352,86 +359,82 @@
     "To illustrate the user-visible effects, consider these examples:\n",
     "\n",
     "If neither the global seed nor the operation seed is set, we get different results for every call to the random op and every re-run of the program:\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# The tf.data API"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 33,
-   "source": [
-    "X = tf.range(5)\n",
-    "X"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(5,), dtype=int32, numpy=array([0, 1, 2, 3, 4], dtype=int32)>"
       ]
      },
+     "execution_count": 33,
      "metadata": {},
-     "execution_count": 33
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "X = tf.range(5)\n",
+    "X"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 34,
-   "source": [
-    "X.numpy()"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([0, 1, 2, 3, 4], dtype=int32)"
       ]
      },
+     "execution_count": 34,
      "metadata": {},
-     "execution_count": 34
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "X.numpy()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 35,
-   "source": [
-    "dataset = tf.data.Dataset.from_tensor_slices(X)\n",
-    "print(dataset)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "<TensorSliceDataset shapes: (), types: tf.int32>\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "dataset = tf.data.Dataset.from_tensor_slices(X)\n",
+    "print(dataset)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 36,
-   "source": [
-    "for item in dataset:\n",
-    "  print(item)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "tf.Tensor(0, shape=(), dtype=int32)\n",
       "tf.Tensor(1, shape=(), dtype=int32)\n",
@@ -441,10 +444,14 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "for item in dataset:\n",
+    "  print(item)"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Depending on the data position and format, the `tf.data.Dataset` class offers quite a few\n",
     "static methods to use to create a dataset easily:\n",
@@ -461,12 +468,24 @@
     "* tf.data.TFRecordDataset - to work with the TFRecord files\n",
     "\n",
     "* tf.data.TextLineDataset - to work with text files, reading them line by line\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<FlatMapDataset shapes: <unknown>, types: tf.float32>"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def noise():\n",
     "  while True:\n",
@@ -474,23 +493,11 @@
     "    \n",
     "dataset = tf.data.Dataset.from_generator(noise, (tf.float32))\n",
     "dataset"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "<FlatMapDataset shapes: <unknown>, types: tf.float32>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 37
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "The only peculiarity of the from_generator method is the need to pass the type of\n",
     "the parameters (tf.float32, in this case) as the second parameter; this is required\n",
@@ -506,12 +513,24 @@
     "- create batches of 32 vectors each, we can do so\n",
     "\n",
     "by calling just three methods chained together:"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "(32, 100, 0)\n",
+      "1\n",
+      "(32, 100, 0)\n"
+     ]
+    }
+   ],
    "source": [
     "buffer_size = 10\n",
     "batch_size = 32\n",
@@ -523,23 +542,11 @@
     "    break\n",
     "  print(idx)\n",
     "  print(noise.shape)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "0\n",
-      "(32, 100, 0)\n",
-      "1\n",
-      "(32, 100, 0)\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "The `map` method is the most widely used method of the tf.data.Dataset object since\n",
     "it allows us to apply a function to every element of the input dataset, producing a\n",
@@ -553,31 +560,30 @@
     "The bat`c`h method gathers the batch_size elements from its input and creates a\n",
     "batch as output. The only constraint of this transformation is that all elements of\n",
     "the batch must have the same shape."
-   ],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "f9f85f796d01129d0dd105a088854619f454435301f6ffec2fea96ecbd9be4ac"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.6 64-bit",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.9.6",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.6 64-bit"
-  },
-  "interpreter": {
-   "hash": "f9f85f796d01129d0dd105a088854619f454435301f6ffec2fea96ecbd9be4ac"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
