uploading code for Custom Layer Video

--- a/TensorFlow/Keras_Custom_Layers_Building_Blocks/Keras_Custom_Layers_Building_Blocks.ipynb
+++ b/TensorFlow/Keras_Custom_Layers_Building_Blocks/Keras_Custom_Layers_Building_Blocks.ipynb
@@ -5,6 +5,13 @@
    "metadata": {},
    "source": [
     "<h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Tensorflow-Keras Custom Layers and Fundamental Building Blocks For Training Model - Detailed Video in my YouTube Channel</b><a id=\"0\"></a></h1>\n",
+    "\n",
+    "\n",
+    "<a href=\"https://youtu.be/DNjqRL4NYTU?list=PLxqBkZuBynVQLW_TF7iIUKsWVCG-hCQFz\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link to my YouTube Video</b></h1></a>\n",
+    "\n",
+    "[![IMAGE ALT TEXT](https://imgur.com/7WAoWdZ.png)](https://youtu.be/DNjqRL4NYTU?list=PLxqBkZuBynVQLW_TF7iIUKsWVCG-hCQFz \"Tensorflow-Keras Custom Layers and Fundamental Building Blocks For Training Model - Detailed Video in my YouTube Channel\")\n",
+    "\n",
+    "\n",
     "-----------------------"
    ]
   },
